Enable Inline render mode within Item layers

Fixes: QTBUG-105354
Change-Id: Ibae8b1dd073a6eee4043873c3e9f493fad3aa40f
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit d63ac8907fd55fa60ebf7f9bb006e0507136f19d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>